syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.giovibal.grpc";
option java_outer_classname = "TestSvcProto";
option objc_class_prefix = "RTG";

package tests;


service TestSvc {
    rpc Test1(TestReq) returns (TestRes) {}
    rpc Test2(TestReq) returns (stream TestRes) {}
    rpc Publish(stream PublishMessage) returns (stream PublishAckMessage) {}
    rpc Subscribe(SubscribeMessage) returns (stream PublishMessage) {}
}

message TestReq {
    string msg = 1;
}
message TestRes {
    string resp = 1;
}
message PublishMessage {
    int64 id = 1;
    string topic = 2;
    string payload= 3;
}
message PublishAckMessage {
    int64 id = 1;
}
message SubscribeMessage {
    string topic = 1;
}